hphp/test/zend/good/Zend/tests/errmsg_010.php.expectf
Fatal error: Methods cannot have multiple visibility modifiers in %s/errmsg_010.php on line 4
